--- a/report.tex
+++ b/report.tex
@@ -158,6 +158,11 @@ The development of Edo is mostly limited by the time of delivery since the EUS w
 		\item The student chooses one of the four choices for each quiz question by ticking the box ahead of each choice, and clicks the submit button.
 		\item The student clicks the completed assignment and quiz. The grades, if available, will be shown to them. 
 	\end{enumerate}
+	\par Professor log off
+	\begin{enumerate}
+		\item The student clicks the logoff button
+		\item The student is logged off.
+	\end{enumerate}
 	\par Professor View course
 	\begin{enumerate}
 		\item The professor enters his/her username and password, and clicks the enter button.
@@ -180,7 +185,11 @@ The development of Edo is mostly limited by the time of delivery since the EUS w
 		\item The professor sets up the correct answer.
 		\item The professor continues 9-12, until all questions are set.
 		\item The professor clicks ``finish" button, and the quiz is created and henceforth posted.
-		
+	\end{enumerate}
+	\par Professor log off
+	\begin{enumerate}
+		\item The professor clicks the logoff button.
+		\item The professor is logged off the system.
 	\end{enumerate}
 	\item Use-Case Diagram
 	\begin{figure}[!ht]
