third-person singular

--- a/report.tex
+++ b/report.tex
@@ -141,45 +141,45 @@ The development of Edo is mostly limited by the time of delivery since the EUS w
 		\item The user enters his/her username and password, and clicks the enter button.
 		\item The user logs in Edo and enter his/her personal homepage.
 	\end{enumerate}
-	\par Student view course
+	\par Student views course
 	\begin{enumerate}
 		\item The student clicks a course displayed on the personal homepage.
-		\item The course notes, course assignment and course quizzes are shown.
+		\item The course notes, assignments and quizzes are shown.
 	\end{enumerate}
-	\par Student view course content
+	\par Student views course content
 	\begin{enumerate}
 		\item The student clicks one course note, and the course note is downloaded.
 	\end{enumerate}
-	\par Student answer assignment
+	\par Student answers assignment
 	\begin{enumerate}
 		\item The student clicks one assignment, and the assignment introduction and guide is displayed.
 		\item The student upload his answer to the assignment to Edo.
 		\item The student clicks finish button to finish, and returns to course information page.
 	\end{enumerate}
-	\par Student answer quiz
+	\par Student answers quiz
 	\begin{enumerate}
 		\item The student clicks one course quiz, and the quiz questions are displayed.
 		\item The student chooses one of the four choices for each quiz question by ticking the box ahead of each choice, and clicks submit button.
 		\item The student clicks the completed assignment and quiz, the grades, if available, will be shown to them. 
 	\end{enumerate}
-	\par Professor log off
+	\par Professor logs off
 	\begin{enumerate}
 		\item The student clicks the logoff button
 		\item The student is logged off.
 	\end{enumerate}
-	\par Professor View course
+	\par Professor views courses
 	\begin{enumerate}
 		\item The professor enters his/her username and password, and clicks the enter button.
 		\item The professor enters the personal homepage, and clicks on a course he teaches.
 	\end{enumerate}
-	\par Professor create assignment
+	\par Professor creates assignment
 	\begin{enumerate}
 		\item The professor clicks the create content button, and chooses one file from his/her PC for upload.
 		\item The professor clicks the create assignment button, and enters the assignment information and chooses a file for that assignment.
 		\item The professor clicks the submit button, and the assignment is created.
 		\item The professor clicks the assignment submission button to view all assignment submissions, and give grades to those submissions by entering the grades in the grade bar.
 	\end{enumerate}
-	\par Professor create quiz
+	\par Professor creates quiz
 	\begin{enumerate}
 		\item The professor clicks create quiz.
 		\item The professor enters the name of the quiz.
@@ -190,7 +190,7 @@ The development of Edo is mostly limited by the time of delivery since the EUS w
 		\item The professor continues 9-12, until all questions are set.
 		\item The professor clicks ``finish" button, and the quiz is created and henceforth posted.
 	\end{enumerate}
-	\par Professor log off
+	\par Professor logs off
 	\begin{enumerate}
 		\item The professor clicks the logoff button.
 		\item The professor is logged off the system.
