rephrase a word issue

--- a/report.tex
+++ b/report.tex
@@ -311,9 +311,9 @@ The following components together perform the essential functionalities of Edo. 
 	\item Components processing detail
 	\begin{itemize}
 		\item Restrictions/limitations for component
-		\par This component does not hold the specific login information as duplication of student accounts may bring security issues.
+		\par This component does not hold the specific login information as duplication of student accounts may bring security hazards.
 		\item Performance issues for component 
-		\par This component should be correctly implemented and run securely since it involves privacy issue. Therefore the performance overhead might be large since it involves security and network transmission.
+		\par This component should be correctly implemented and run securely since it involves privacy issue. Therefore the performance overhead might be large since it involves security and network transmission, a conflict of interest between stakeholders students and security managers.
 		\item Design constraints for component 
 		\par Login is largely dependent on the transmission between Edo and the account system, and thus the responsiveness may not be guaranteed. The username and password will be limited to a maximum of 32 characters.
 		\item Processing detail for each operation of component 
@@ -378,7 +378,7 @@ The following components together perform the essential functionalities of Edo. 
 
 
 \subsubsection{External machine interface}
-Edo will be an online platform and thus the users are required to use the browser and enter the URL or Edo to access \thispagestyle{?}s system. The physical machine could be either PC or tablets.
+Edo will be an online platform and thus the users are required to use the browser and enter the URL or Edo to access this system. The physical machine could be either PC or tablets.
 
 \subsubsection{External system interface}
 Edo will be exchanging data with the student account system and the web system that carries out the data transmission. 
