--- a/slides.tex
+++ b/slides.tex
@@ -105,7 +105,7 @@ Department of Computing
 \frametitle{Software Context} % Table of contents slide, comment this block out to remove it
 \begin{itemize}
 	\item A newly founded university Edward University of Smartness in need of a course management system
-	\item In urgent need, core functionalities required
+	\item Limited time, core functionalities to be delivered
 	\item Professor - upload course content, set quizzes and assignments
 	\item Student - view course content, answer quizzes and submit assignments
 \end{itemize}
@@ -116,7 +116,7 @@ Department of Computing
 \frametitle{Use Case Diagram}
 \begin{figure}[!ht]
 	\begin{center}
-		%\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{datamodel}
+		\includegraphics[width=\textwidth,height=0.7\textheight,keepaspectratio]{usecase}
 	\end{center}
 	\caption{Use Case Diagram}
 \end{figure}
@@ -126,7 +126,7 @@ Department of Computing
 	\frametitle{Class Diagram}
 	\begin{figure}[!ht]
 		\begin{center}
-			%\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{datamodel}
+			\includegraphics[width=\textwidth,height=0.7\textheight,keepaspectratio]{class}
 		\end{center}
 		\caption{Class Diagram}
 	\end{figure}
@@ -137,7 +137,7 @@ Department of Computing
 	\frametitle{State Machine Diagram}
 	\begin{figure}[!ht]
 		\begin{center}
-			%\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{datamodel}
+			\includegraphics[width=\textwidth,height=0.7\textheight,keepaspectratio]{state}
 		\end{center}
 		\caption{State Machine Diagram}
 	\end{figure}
@@ -147,13 +147,21 @@ Department of Computing
 	\frametitle{Sequence Diagram}
 	\begin{figure}[!ht]
 		\begin{center}
-			%\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{datamodel}
+			\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{studSeq}
 		\end{center}
-		\caption{Sequence Diagram}
+		\caption{Sequence Diagram for Students}
 	\end{figure}
 \end{frame}
 
-
+\begin{frame}
+	\frametitle{Sequence Diagram (cont.)}
+	\begin{figure}[!ht]
+		\begin{center}
+			\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{profSeq}
+		\end{center}
+		\caption{Sequence Diagram for Professors}
+	\end{figure}
+\end{frame}
 
 \begin{frame}
 \Huge{The End}
